// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.scp.coordinator.protos.keymanagement.keyhosting.api.v1;

import "coordinator/protos/keymanagement/keyhosting/api/v1/encoded_public_key.proto";

option java_package = "com.google.scp.coordinator.protos.keymanagement.keyhosting.api.v1";
option java_outer_classname = "GetActivePublicKeysResponseProto";

/**
 * Response containing list of active public keys
 */
message GetActivePublicKeysResponse {
  repeated EncodedPublicKey keys = 1;
}
